5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4310/executions/1573_1330.log
== TEST (2019-03-13 14:49:47) 
-- CODE:
print(250/6 round(250, 2)
-- ERROR:
File "XXXX", line 1
    print(250/6 round(250, 2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:50:09) 
-- CODE:
print(250/6) 
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:50:19) 
-- CODE:
print(250/6) 
-- EXECUTION TIME:
0.225535
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:50:51) 
-- CODE:
print(41,46) 
-- OUTPUT:
41 46
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:50:53) 
-- CODE:
print(41,46) 
-- EXECUTION TIME:
0.165438
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:51:58) 
-- CODE:
print(250/6	round(41. 46))
-- ERROR:
File "XXXX", line 1
    print(250/6	round(41. 46))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:51:59) 
-- CODE:
print(250/6	round(41. 46))
-- EXECUTION TIME:
0.147819
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(250/6	round(41. 46))
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:52:31) 
-- CODE:
print(250/6	round(250/6, 2))
-- ERROR:
File "XXXX", line 1
    print(250/6	round(250/6, 2))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:52:57) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:52:59) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.132722
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
